# aap-cpp

./: CMakeLists.txt  README.md  aap.hpp
examples/: quickstart.cpp
tests/: test_aap.cpp
